--- a/Odoo-Installation/Terraform/odoo18-terraform/terraform.tfvars.example
+++ b/Odoo-Installation/Terraform/odoo18-terraform/terraform.tfvars.example
@@ -1,12 +1,14 @@
-
-project_id           = "your-existing-project-id"
-region               = "us-central1"
-zone                 = "us-central1-a"
-db_password          = "your-strong-db-password"
-db_instance_name     = "odoo18-db"
-db_name              = "odoo18"
-db_user_name         = "odoo18"
-secret_name          = "odoo18-db-password"
-vm_name              = "odoo18-vm"
-firewall_rule_name   = "allow-odoo-http"
-replica_location     = "us-central1"
+project_id         = "your-gcp-project-id"
+region             = "us-central1"
+zone               = "us-central1-a"
+vm_name            = "odoo18-vm-test"
+db_instance_name   = "odoo18-db-test"
+db_name            = "odoo18-test"
+db_user_name       = "odoo18"
+db_password        = "replace-with-secure-secret"
+secret_name        = "odoo18-db-password"
+firewall_rule_name = "allow-odoo-http-test"
+replica_location   = "us-central1"
+github_connection  = "AvinashGitConnection"
+github_owner       = "avinash2196"
+github_repo        = "OddoDemo"
