--- a/Odoo-Installation/Terraform/odoo18-terraform/cloudbuild.yaml
+++ b/Odoo-Installation/Terraform/odoo18-terraform/cloudbuild.yaml
@@ -8,22 +8,20 @@ steps:
           echo "Generating terraform.auto.tfvars with secret value..."
           DB_PASSWORD=$(gcloud secrets versions access latest --secret="odoo18-db-password")
 
-          cat > terraform.auto.tfvars <<EOF
-project_id         = "hippa-docai-demo"
-region             = "us-central1"
-zone               = "us-central1-a"
-vm_name            = "odoo18-vm-test"
-db_instance_name   = "odoo18-db-test"
-db_name            = "odoo18-test"
-db_user_name       = "odoo18"
-db_password        = "${DB_PASSWORD}"
-secret_name        = "odoo18-db-password"
-firewall_rule_name = "allow-odoo-http-test"
-replica_location   = "us-central1"
-github_connection  = "AvinashGitConnection"
-github_owner       = "avinash2196"
-github_repo        = "OddoDemo"
-EOF
+          echo 'project_id         = "hippa-docai-demo"'         > terraform.auto.tfvars
+          echo 'region             = "us-central1"'             >> terraform.auto.tfvars
+          echo 'zone               = "us-central1-a"'           >> terraform.auto.tfvars
+          echo 'vm_name            = "odoo18-vm-test"'          >> terraform.auto.tfvars
+          echo 'db_instance_name   = "odoo18-db-test"'          >> terraform.auto.tfvars
+          echo 'db_name            = "odoo18-test"'             >> terraform.auto.tfvars
+          echo 'db_user_name       = "odoo18"'                  >> terraform.auto.tfvars
+          echo "db_password        = \"${DB_PASSWORD}\""        >> terraform.auto.tfvars
+          echo 'secret_name        = "odoo18-db-password"'      >> terraform.auto.tfvars
+          echo 'firewall_rule_name = "allow-odoo-http-test"'    >> terraform.auto.tfvars
+          echo 'replica_location   = "us-central1"'             >> terraform.auto.tfvars
+          echo 'github_connection  = "AvinashGitConnection"'    >> terraform.auto.tfvars
+          echo 'github_owner       = "avinash2196"'             >> terraform.auto.tfvars
+          echo 'github_repo        = "OddoDemo"'                >> terraform.auto.tfvars
 
   - name: 'hashicorp/terraform:light'
     entrypoint: sh
