--- a/Odoo-Installation/Terraform/odoo18-terraform/cloudbuild.yaml
+++ b/Odoo-Installation/Terraform/odoo18-terraform/cloudbuild.yaml
@@ -3,40 +3,35 @@ steps:
   entrypoint: bash
   dir: 'Odoo-Installation/Terraform/odoo18-terraform'
   args:
-  - -c
-  - |
-      echo "Fetching DB password from Secret Manager..."
-      gcloud secrets versions access latest --secret="odoo18-db-password" > dbpass.txt
-      DB_PASSWORD=$(cat dbpass.txt | tr -d '\n')
+    - -c
+    - |
+        echo "Fetching DB password from Secret Manager..."
+        DB_PASSWORD=$(gcloud secrets versions access latest --secret="odoo18-db-password")
 
-      cat <<EOF > terraform.auto.tfvars
-project_id         = "hippa-docai-demo"
-region             = "us-central1"
-zone               = "us-central1-a"
-vm_name            = "odoo18-vm-test"
-db_instance_name   = "odoo18-db-test"
-db_name            = "odoo18-test"
-db_user_name       = "odoo18"
-db_password        = "DBPASSWORD_PLACEHOLDER"
-secret_name        = "odoo18-db-password"
-firewall_rule_name = "allow-odoo-http-test"
-replica_location   = "us-central1"
-github_connection  = "AvinashGitConnection"
-github_owner       = "avinash2196"
-github_repo        = "OddoDemo"
-EOF
-
-      sed -i "s|DBPASSWORD_PLACEHOLDER|$DB_PASSWORD|g" terraform.auto.tfvars
+        echo 'project_id         = "hippa-docai-demo"'         > terraform.auto.tfvars
+        echo 'region             = "us-central1"'             >> terraform.auto.tfvars
+        echo 'zone               = "us-central1-a"'           >> terraform.auto.tfvars
+        echo 'vm_name            = "odoo18-vm-test"'          >> terraform.auto.tfvars
+        echo 'db_instance_name   = "odoo18-db-test"'          >> terraform.auto.tfvars
+        echo 'db_name            = "odoo18-test"'             >> terraform.auto.tfvars
+        echo 'db_user_name       = "odoo18"'                  >> terraform.auto.tfvars
+        echo "db_password        = \"$DB_PASSWORD\""          >> terraform.auto.tfvars
+        echo 'secret_name        = "odoo18-db-password"'      >> terraform.auto.tfvars
+        echo 'firewall_rule_name = "allow-odoo-http-test"'    >> terraform.auto.tfvars
+        echo 'replica_location   = "us-central1"'             >> terraform.auto.tfvars
+        echo 'github_connection  = "AvinashGitConnection"'    >> terraform.auto.tfvars
+        echo 'github_owner       = "avinash2196"'             >> terraform.auto.tfvars
+        echo 'github_repo        = "OddoDemo"'                >> terraform.auto.tfvars
 
 - name: 'hashicorp/terraform:light'
   entrypoint: sh
   dir: 'Odoo-Installation/Terraform/odoo18-terraform'
   args:
-  - -c
-  - |
-      terraform init
-      terraform plan -out=tfplan
-      terraform apply -auto-approve tfplan
+    - -c
+    - |
+        terraform init
+        terraform plan -out=tfplan
+        terraform apply -auto-approve tfplan
 
 options:
   logging: CLOUD_LOGGING_ONLY
